# WXRPG

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
data/story/: output_style.regex  story_nodes.json
data/world/: items.json  world_docs.json
src/jianghu_longcat_rpg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/jianghu_rpg/: __init__.py  __main__.py  cli.py  config.py  dice.py  engine.py  longcat_client.py  models.py  output_formatter.py  vector_store.py  world.py
